# haskell-demo

./: .gitignore  flake.nix  hello.cabal
app/: Main.hs
lib/: Lib.hs
