cabal-version:      2.4
name:               hello
version:            0.1.0.0

author:             Andrea Ciceri
maintainer:         andreaciceri@mlabs.city

executable executable
    main-is:          Main.hs

    build-depends:    base ^>=4.14.3.0,
                      hello
    hs-source-dirs:   app
    default-language: Haskell2010

library
    build-depends:    base ^>=4.14.3.0
    hs-source-dirs:   lib
    exposed-modules:  Lib
